--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "@snovasys/snova-tailwind-uikit": "0.0.308",
-    "@snovasys/timechamp-demo-header-and-sidenav" :"0.0.111",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@ncstate/sat-popover": "^13.1.0",
+    "@snovasys/snova-tailwind-uikit": "0.0.308",
+    "@snovasys/timechamp-demo-header-and-sidenav": "0.0.111",
     "ng-apexcharts": "1.12.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -40,7 +41,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.5.2",
-    "tailwindcss-font-inter": "^3.1.0"
+    "tailwindcss-font-inter": "^3.1.0",
+    "typescript": "~5.5.2"
   }
 }
